tests/e2e/explicit_cast_invalid.error
Error: syntax error in story at line 2, column 5

2|    c = t to Map[float,float]
          ^^^^^^^^^^^^^^

E0126: Type casting not supported from `Map[time,time]` to `Map[float,float]`.
