tests/e2e/explicit_cast_invalid.story
t = {} to Map[time,time]
c = t to Map[float,float]
